active style added

--- a/src/Pages/Home/Product/Product.css
+++ b/src/Pages/Home/Product/Product.css
@@ -11,5 +11,6 @@
 .link-hover:hover{
     /* background-color: rgb(251, 239, 224); */
     color: #af4747 !important;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
+
